[package]
name = "json-number"
version = "0.4.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"

description = "JSON number parsing and storage"
categories = ["data-structures"]
keywords = ["json", "number", "parser"]
repository = "https://github.com/timothee-haudebourg/json-number"
documentation = "https://docs.rs/json-number"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
smallnumberbuf = [ "smallvec" ]

[dependencies]
lexical = { version = "6.1.1", features = [ "format" ] }
smallvec = { version = "1.8.1", optional = true }
serde = { version = "1", optional = true }