[package]
name = "json-number"
version = "0.4.9"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"

description = "JSON number parsing and storage"
categories = ["data-structures"]
keywords = ["json", "number", "parser"]
repository = "https://github.com/timothee-haudebourg/json-number"
documentation = "https://docs.rs/json-number"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = ["serde"]
smallnumberbuf = ["smallvec"]
canonical = ["ryu-js"]

[dependencies]
thiserror = "2.0.12"
lexical = { version = "7.0.1", features = ["format"] }
smallvec = { version = "1.8.1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
ryu-js = { version = "0.2.2", optional = true }

[dev-dependencies]
serde_json = { version = "1", features = ["arbitrary_precision"] }
