[package]
name = "json-number"
version = "0.4.10"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"

description = "JSON number parsing and storage"
categories = ["data-structures"]
keywords = ["json", "number", "parser"]
repository = "https://github.com/timothee-haudebourg/json-number"
documentation = "https://docs.rs/json-number"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
smallnumberbuf = [ "smallvec" ]
canonical = [ "ryu-js" ]

[dependencies]
lexical = { version = "7.0", features = [ "format" ] }
smallvec = { version = "1.13", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
ryu-js = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = { version = "1", features = ["arbitrary_precision"] }
